src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__lreal_to_real_expt.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

define double @main() {
entry:
  %main = alloca double, align 8
  store double 0.000000e+00, double* %main, align 8
  %call = call double @EXPT__LREAL__LREAL(double 3.000000e+00, double 0x3FC99999A0000000)
  store double %call, double* %main, align 8
  %main_ret = load double, double* %main, align 8
  ret double %main_ret
}

declare double @EXPT__LREAL__LREAL(double, double)

