src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__pointer_addition.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%main_interface = type { i16, i16* }

@main_instance = global %main_interface { i16 10, i16* null }

define void @main(%main_interface* %0) {
entry:
  %x = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 0
  %pt = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 1
  store i16* %x, i16** %pt, align 8
  %load_pt = load i16*, i16** %pt, align 8
  store i32 add (i32 ptrtoint (i16* %load_pt to i32), i32 1), i16** %pt, align 4
  ret void
}

