src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__string_not_equal_with_constant_test.snap
---
source: src/codegen/tests/expression_tests.rs
assertion_line: 161
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%STRING_EQUAL_interface = type { [1025 x i8], [1025 x i8] }
%baz_interface = type { [81 x i8], i8 }

@utf08_literal_0 = unnamed_addr constant [2 x i8] c"b\00"

define i8 @STRING_EQUAL(%STRING_EQUAL_interface* %0) {
entry:
  %op1 = getelementptr inbounds %STRING_EQUAL_interface, %STRING_EQUAL_interface* %0, i32 0, i32 0
  %op2 = getelementptr inbounds %STRING_EQUAL_interface, %STRING_EQUAL_interface* %0, i32 0, i32 1
  %STRING_EQUAL = alloca i8, align 1
  store i8 0, i8* %STRING_EQUAL, align 1
  %STRING_EQUAL_ret = load i8, i8* %STRING_EQUAL, align 1
  ret i8 %STRING_EQUAL_ret
}

define i16 @baz(%baz_interface* %0) {
entry:
  %a = getelementptr inbounds %baz_interface, %baz_interface* %0, i32 0, i32 0
  %result = getelementptr inbounds %baz_interface, %baz_interface* %0, i32 0, i32 1
  %baz = alloca i16, align 2
  %1 = bitcast [81 x i8]* %a to i8*
  call void @llvm.memset.p0i8.i64(i8* align 1 %1, i8 0, i64 mul nuw (i64 ptrtoint (i8* getelementptr (i8, i8* null, i32 1) to i64), i64 81), i1 false)
  store i8 0, i8* %result, align 1
  store i16 0, i16* %baz, align 2
  %STRING_EQUAL_instance = alloca %STRING_EQUAL_interface, align 8
  br label %input

input:                                            ; preds = %entry
  %2 = getelementptr inbounds %STRING_EQUAL_interface, %STRING_EQUAL_interface* %STRING_EQUAL_instance, i32 0, i32 0
  %3 = bitcast [1025 x i8]* %2 to i8*
  %4 = bitcast [81 x i8]* %a to i8*
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align 1 %3, i8* align 1 %4, i32 81, i1 false)
  %5 = getelementptr inbounds %STRING_EQUAL_interface, %STRING_EQUAL_interface* %STRING_EQUAL_instance, i32 0, i32 1
  %6 = bitcast [1025 x i8]* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align 1 %6, i8* align 1 getelementptr inbounds ([2 x i8], [2 x i8]* @utf08_literal_0, i32 0, i32 0), i32 2, i1 false)
  br label %call

call:                                             ; preds = %input
  %call1 = call i8 @STRING_EQUAL(%STRING_EQUAL_interface* %STRING_EQUAL_instance)
  br label %output

output:                                           ; preds = %call
  br label %continue

continue:                                         ; preds = %output
  %tmpVar = xor i8 %call1, -1
  store i8 %tmpVar, i8* %result, align 1
  %baz_ret = load i16, i16* %baz, align 2
  ret i16 %baz_ret
}

; Function Attrs: argmemonly nofree nosync nounwind willreturn writeonly
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #0

; Function Attrs: argmemonly nofree nosync nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i32(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i32, i1 immarg) #1

attributes #0 = { argmemonly nofree nosync nounwind willreturn writeonly }
attributes #1 = { argmemonly nofree nosync nounwind willreturn }

